katalog/istio-operator/jaeger-operator/ns.yml
# Copyright (c) 2017-present SIGHUP s.r.l All rights reserved.
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.

---
apiVersion: v1
kind: Namespace
metadata:
  name: jaeger
